Revision history for Data::Validation

0.8.155  2012-09-06
         - Added POD spelling tests
         - Updated inc::Bob to 1.5

0.8.153  2012-06-11
         - Added filterZeroLength
         - Fixed bug when filters but no validations

0.7.152  2012-05-02
         - Fixed expression detecting Konig's smoker

0.7.151  2012-04-29
         - Stopped Konig CPAN testing. Compare
           2874f920-91ca-11e1-a09c-f66955de7b98 with
           542b6056-8ca0-11e1-951f-159b42b6749c same OS, OS version,
           architecture and Perl version, different results. Random

0.7.150  2012-04-19
         - Turned CPAN testing on
         - Changed D_V_Exception constriant name to current standard
         - Updated inc::Bob to 1.3
         - Updated inc::Bob. Added inc::CPANTesting
         - Updated Moose / Class::MOP / MRO::Compat dependencies
         - Updated inc::Bob

0.6.141  2011-04-12
         - Suppressed dcollins CPAN testing
         - Checks all fields in a form. Returns multiple errors
         - Now uses Try::Tiny
         - Moved boilerplate M::B subclass code to inc/Bob.pm
         - Suppressed Konig CPAN testing again

0.6.133  2010-12-16
         - Repatched Module::Build

0.6.132  2010-12-16
         - Tried to stop Koenigs broken testing platform

0.6.123  2010-09-22
         - Switched to M::B for installs

0.5.120  2010-09-22
         - Changed str2time call in Constraints::Date

0.4.116  27/10/2009
         - Made D_V_Exception constraint name more unique as constraint
         names in Moose are fucking GLOBAL

0.4.114  29/06/2009
         - Added POD for field comparison
         - Fixed signature key

0.3.104  24/06/2009
         - Use Class::MOP in ensure_class_loaded
         - Added field comparison
         - Added more tests

0.2.85   06/06/2009
         - Fixed tests
         - Enhanced exception messages

0.2.81   05/06/2009
         - Exception class API changed

0.2.78   20/05/2009
         - Removed stupid _will method